Fixed js and css file references

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond: ital,wght@0,300;0,400;0,600;1,400&family=Fira+Code:wght@400;600&display=swap" rel="stylesheet">
     
     <!-- Brand CSS Variables -->
-    <link rel="stylesheet" href="styles/phronos-variables.css">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles_phronos-variables.css"> 
+    <link rel="stylesheet" href="styles_main.css">
+
 </head>
 <body>
     <!-- Grid Background -->
@@ -182,6 +183,6 @@
         </div>
     </footer>
     
-    <script src="scripts/main.js"></script>
+    <script src="scripts_main.js"></script>
 </body>
 </html>
