--- a/index.html
+++ b/index.html
@@ -3,84 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="P.H.R.O.N.O.S. — Calibrating the Human Signal. An observatory for strategic foresight and decision-making.">
-    <meta name="keywords" content="strategic foresight, decision making, institutional resilience, AI frameworks, observatory">
-    <meta name="author" content="P.H.R.O.N.O.S.">
-    <title>P.H.R.O.N.O.S. | Calibrating the Human Signal</title>
-    <!-- Links to CSS -->
-    <link rel="stylesheet" href="styles_phronos-variables.css">
-    <link rel="stylesheet" href="styles_main.css">
+    <title>PHRONOS | The 2025 Observatory</title>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;1,400&family=Fira+Code:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- BACKGROUND GRID -->
+
     <div class="grid-bg"></div>
 
-    <!-- NAVIGATION -->
-    <nav class="nav">
-        <div class="logo">
-            <div class="lens-icon pulse"></div>
-            <span class="logo-text">PHRONOS | 2025</span>
+    <nav class="flex">
+        <div class="logo mono uppercase flex">
+            <!-- Canvas for Ouroboros Animation -->
+            <canvas id="logo-canvas" width="48" height="48"></canvas>
+            PHRONOS
         </div>
-        <ul class="nav-links">
-            <li><a href="#telemetry" class="nav-link">Telemetry</a></li>
-            <li><a href="#methodology" class="nav-link">Methodology</a></li>
-            <li><a href="#risk-radar" class="nav-link">Risk Radar</a></li>
-            <li><a href="#anomalies" class="btn-lab">Access Instruments ↗</a></li>
-        </ul>
+        <div class="nav-links flex">
+            <a href="#" class="nav-link mono uppercase">Telemetry</a>
+            <a href="#" class="nav-link mono uppercase">Methodology</a>
+            <a href="#" class="nav-link mono uppercase">Risk Radar</a>
+            <a href="#" class="btn-lab mono uppercase">Access Instruments ↗</a>
+        </div>
     </nav>
 
-    <!-- HERO SECTION -->
-    <section class="hero">
-        <div class="hero-content">
-            <h1>Calibrating the <br><span>Human Signal.</span></h1>
-            <p class="hero-subtitle">Institutions look backward. We look forward. P.H.R.O.N.O.S. is the digital observatory for scanning the decline of foresight in a high-noise world.</p>
-            <div class="cta-group">
-                <a href="#signals" class="btn-primary">View Latest Signals</a>
-                <a href="#mission" class="btn-secondary">Our Mission Statement ↗</a>
+    <section class="hero grid">
+        <div class="content-left">
+            <!-- System Header -->
+            <span class="mono uppercase system-header">
+                // Public Hub for Resilient Ontological Navigation via Open Science
+            </span>
+
+            <h1>Calibrating the <br> <span>Human Signal.</span></h1>
+
+            <div class="subtitle-box">
+                <p class="subtitle">
+                    "In a world of increasing informatic entropy, PHRONOS is the digital observatory for the next epoch of human cognition."
+                </p>
+            </div>
+
+            <div class="cta-group flex">
+                <button class="btn-primary mono">View Latest Signals</button>
+                <a href="#" class="nav-link mono uppercase" style="align-self: center; border-bottom: 1px solid var(--ink);">Read the Constitution</a>
             </div>
         </div>
-        <div class="hero-right">
-            <div class="data-panel">
-                <div class="panel-header">
-                    <span><span class="live-dot"></span>System Active</span>
-                    <span>UTC: 12:45</span>
+
+        <div class="data-panel">
+            <div class="panel-header flex mono uppercase">
+                <span><span class="live-dot"></span>System Active</span>
+                <span>UTC 08:00</span>
+            </div>
+            <div class="stat-grid grid">
+                <div class="stat-cell">
+                    <span class="stat-label mono uppercase">Verified Sensors</span>
+                    <span class="stat-val serif">52,404</span>
                 </div>
-                <div class="stats">
-                    <div class="stat"> 
-                        <p class="stat-label">Verified Sensors</p>
-                        <p class="stat-value">52,404</p>
-                    </div>
-                    <div class="stat">
-                        <p class="stat-label">Signal / Noise</p>
-                        <p class="stat-value alert">Low</p>
-                    </div>
-                    <div class="stat">
-                        <p class="stat-label">Forecast Precision</p>
-                        <p class="stat-value">89.2%</p>
-                    </div>
-                    <div class="stat">
-                        <p class="stat-label">Foresight Horizon</p>
-                        <p class="stat-value gold">~3.5 Years</p>
-                    </div>
+                <div class="stat-cell">
+                    <span class="stat-label mono uppercase">Signal / Noise</span>
+                    <span class="stat-val serif" style="color: var(--alert)">LOW</span>
                 </div>
+                <div class="stat-cell">
+                    <span class="stat-label mono uppercase">Agency Index</span>
+                    <span class="stat-val serif">48.2 (▼)</span>
+                </div>
+                <div class="stat-cell">
+                    <span class="stat-label mono uppercase">Foresight Horizon</span>
+                    <span class="stat-val serif" style="color: var(--gold)">~3.5 YRS</span>
+                </div>
+            </div>
+            <div class="log-entry mono uppercase">
+                > ANOMALY DETECTED: SECTOR 4 [EXECUTIVE]
             </div>
         </div>
     </section>
 
-    <!-- MISSION SECTION -->
-    <section id="mission" class="mission-section">
-        <h2>Our Mission</h2>
-        <p>"To provide transparent research, foresight tools, and institutional frameworks to ensure epistemic health."</p>
-    </section>
-
-    <!-- FOOTER -->
-    <footer>
-        <p>© 2025 P.H.R.O.N.O.S. | A Public Digital Observatory for Strategic Foresight</p>
+    <footer class="flex">
+        <div class="feed-wrapper">
+            <span class="feed-label mono uppercase">Incoming Feeds</span>
+            <div class="marquee mono uppercase">
+                <p>
+                    Brookings: "Citation Confirmed" &nbsp;&bull;&nbsp; 
+                    Stanford GSB: "Data Link Active" &nbsp;&bull;&nbsp; 
+                    System: "Protocol A1 Live" &nbsp;&bull;&nbsp; 
+                    Phronos Core: "Syncing..."
+                </p>
+            </div>
+        </div>
+        <span class="mono hidden-mobile" style="margin-left: 2rem;">v2.5.0</span>
     </footer>
 
-    <!-- JavaScript -->
-    <!-- Link to the animation script -->
-    <script src="scripts_main.js"></script>
+    <!-- Main Logic -->
+    <script src="script.js"></script>
+
 </body>
 </html>
